--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -372,7 +372,8 @@ Curriculum learning (CL) has been widely explored to facilitate the learning of 
 
 @InProceedings{viraj_joshi_rlc2025,
   topic    = {2},
-  author   = {Viraj Joshi and Zifan Xu and Bo Liu and Peter Stone and Amy Zhang},
+  selected = {true},
+  author   = {Viraj Joshi^{*} and Zifan Xu^{*} and Bo Liu and Peter Stone and Amy Zhang},
   title    = {Benchmarking Massively Parallelized Multi-Task Reinforcement Learning for Robotics Tasks},
   booktitle = {Reinforcement Learning Conference (RLC)},
   year     = {2025},
